--- a/notebooks/BraitenbergVehicles.ipynb
+++ b/notebooks/BraitenbergVehicles.ipynb
@@ -3,17 +3,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/Braitenberg_Vehicles.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/BraitenbergVehicles.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "AQMTpw5e_0cx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
@@ -62,20 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0.9.32'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from aitk.robots import World, Vehicle, LightSensor, SmellSensor"
    ]
@@ -91,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random seed set to: 5834079\n"
+      "Random seed set to: 5525920\n"
      ]
     }
    ],
@@ -116,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -136,12 +135,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfef70d1ca994b248e75a5533eeaf46f",
+       "model_id": "8fbf8a4b46544ff0869dc68be5903ce4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
       ]
      },
      "metadata": {},
@@ -175,7 +174,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### 2.1 Positive connections\n",
     "\n",
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,16 +212,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to see the robot's movement through the world, scroll back up to the original world view in section 1. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 5834079\n",
-      "Simulation stopped at: 00:00:06.3; speed 0.97 x real time\n"
+      "Using random seed: 5525920\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.007802009582519531,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 72,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": null,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d415a8be9811441b8cc8ed62b2dbcccb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation stopped at: 00:00:05.30; speed 0.98 x real time\n"
      ]
     }
    ],
@@ -235,6 +280,8 @@
    "source": [
     "**NOTE**: Each vehicle will run continually until you manually stop it. You can try re-starting it as many times as you'd like.\n",
     "\n",
+    "To **end the running of the current vehicle**, press the execution button.\n",
+    "\n",
     "Braitenberg described the resulting behavior as **fear** because the robot moves quickly away from the light source and tries to hide in the corners."
    ]
   },
@@ -248,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,16 +307,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Reminder:** in order to see the robot's movement through the world, scroll back up to the original world view in section 1. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 5834079\n",
-      "Simulation stopped at: 00:00:02.2; speed 0.96 x real time\n"
+      "Using random seed: 5525920\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.008255720138549805,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 72,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": null,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "914bff92fceb455c9e21666bb31d1395",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation stopped at: 00:00:03.80; speed 0.98 x real time\n"
      ]
     }
    ],
@@ -282,7 +373,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Braitenberg described the resulting behavior as **aggression** because the robot moves quickly towards the light source. If the light source were an obstacle, the vehicle would continually crash into it. However, in this world with wrap around boundaries, the vehicle travels through the light, coming at it again from the other side. "
+    "Braitenberg described the resulting behavior as **aggression** because the robot moves quickly towards the light source. If the light source were an obstacle, the vehicle would continually crash into it. However, in this world with wrap around boundaries, the vehicle travels through the light, coming at it again from the other side. \n",
+    "\n",
+    "**Remember:** Each vehicle will run continually until you manually stop it. You can try re-starting it as many times as you'd like.\n",
+    "\n",
+    "To **end the running of the current vehicle**, press the execution button."
    ]
   },
   {
@@ -296,7 +391,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### 2.2.1 Vehicle 3a\n",
     "The left motor speed is inhibited by the left light sensor reading and the right motor speed is inhibited by the right light sensor reading. Let's see what happens."
@@ -304,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,16 +413,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Reminder:** in order to see the robot's movement through the world, scroll back up to the original world view in section 1. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 5834079\n",
-      "Simulation stopped at: 00:00:02.7; speed 0.97 x real time\n"
+      "Using random seed: 5525920\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.010031700134277344,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 72,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": null,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b319398cd8f14b788978061cec7d08e2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation stopped at: 00:00:03.90; speed 0.98 x real time\n"
      ]
     }
    ],
@@ -338,7 +479,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Braitenberg described the resulting behavior as **love** because the robot turns towards the light source and stops, gazing endlessly at the bulb."
+    "Braitenberg described the resulting behavior as **love** because the robot turns towards the light source and stops, gazing endlessly at the bulb.\n",
+    "\n",
+    "**Remember:** Each vehicle will run continually until you manually stop it. You can try re-starting it as many times as you'd like.\n",
+    "\n",
+    "To **end the running of the current vehicle**, press the execution button."
    ]
   },
   {
@@ -351,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,16 +508,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Reminder:** in order to see the robot's movement through the world, scroll back up to the original world view in section 1. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 5834079\n",
-      "Simulation stopped at: 00:00:02.4; speed 0.96 x real time\n"
+      "Using random seed: 5525920\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.008183002471923828,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 72,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": null,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0a2458a44e074db7a3c6ea64244dd88f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation stopped at: 00:00:05.50; speed 0.98 x real time\n"
      ]
     }
    ],
@@ -385,7 +574,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Braitenberg calls this vehicle an **explorer** because it turns away from the light and speeds away.  The robot goes faster the farther it is from the light, causing it to eventually skirt around the edges of this wrap around world."
+    "Braitenberg calls this vehicle an **explorer** because it turns away from the light and speeds away.  The robot goes faster the farther it is from the light, causing it to eventually skirt around the edges of this wrap around world.\n",
+    "\n",
+    "**Remeber:** Each vehicle will run continually until you manually stop it. You can try re-starting it as many times as you'd like.\n",
+    "\n",
+    "To **end the running of the current vehicle**, press the execution button."
    ]
   },
   {
@@ -414,14 +607,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random seed set to: 737988\n"
+      "Random seed set to: 1719959\n"
      ]
     }
    ],
@@ -433,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,18 +640,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53dbdcd4f9154e70a4a807d79bef23c5",
+       "model_id": "56d320dc306c490584aa93646025ae5d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
       ]
      },
      "metadata": {},
@@ -487,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,16 +697,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to see the robot's movement through the new world, scroll back up to the world view in section 3. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 737988\n",
-      "Simulation stopped at: 00:00:04.9; speed 0.98 x real time\n"
+      "Using random seed: 1719959\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.008357048034667969,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": 72,
+       "postfix": null,
+       "prefix": "",
+       "rate": null,
+       "total": null,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c103df859b84077804ef0ce9c950ebc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation stopped at: 00:00:10.50; speed 0.98 x real time\n"
      ]
     }
    ],
@@ -526,7 +763,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This vehicle slows down significantly when it senses the red light ahead, but it doesn't stop completely because it is also affected by its green light readings. This vehicle also speeds towards the green light. When it can sense both the lights simultaneously it becomes harder to predict the resulting behavior.  "
+    "This vehicle slows down significantly when it senses the red light ahead, but it doesn't stop completely because it is also affected by its green light readings. This vehicle also speeds towards the green light. When it can sense both the lights simultaneously it becomes harder to predict the resulting behavior.  \n",
+    "\n",
+    "**Remember:** Each vehicle will run continually until you manually stop it. You can try re-starting it as many times as you'd like.\n",
+    "\n",
+    "To **end the running of the current vehicle**, press the execution button."
    ]
   },
   {
@@ -541,18 +782,11 @@
     "\n",
     "We encourage you to experiment with your own vehicle, perhaps it will fear one light and explore around another. The choice is yours!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -566,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
