--- a/notebooks/WhatIsItLikeToBeARobot.ipynb
+++ b/notebooks/WhatIsItLikeToBeARobot.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/To_be_a_robot.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/WhatIsItLikeToBeARobot.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
    "cell_type": "code",
@@ -20,14 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computational Essays in Artificial Intelligence"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## What is it like to be a robot?"
+    "# What is it like to be a robot?"
    ]
   },
   {
@@ -42,26 +37,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Setup"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install aitk --quiet"
+    "%pip install aitk --upgrade --quiet"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Simulated World"
+    "## Simulated World"
    ]
   },
   {
@@ -114,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Distal vs proximal perspectives\n",
+    "## Distal vs proximal perspectives\n",
     "\n",
     "Let's watch the world from a bird's-eye view as the robot moves around.  This gives us a *distal* perspective on the world.  We are not experiencing the world as the robot does, but instead have a top-down global view of what is happening. \n",
     "\n",
@@ -136,7 +124,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
       ]
      },
      "metadata": {},
@@ -209,7 +197,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x00\\x80\\x00\\x00\\x00@\\x08\\x06\\x00\\x00\\x00\\xd2\\xd6\\x7f\u2026"
+       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x00\\x80\\x00\\x00\\x00@\\x08\\x06\\x00\\x00\\x00\\xd2\\xd6\\x7f…"
       ]
      },
      "metadata": {},
@@ -224,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Navigating through the world\n",
+    "## Navigating through the world\n",
     "\n",
     "Below is a simple controller that tries to keep moving forward while avoiding any obstacles that it encounters.  It is only using the robot's range sensors to make navigation decisions. "
    ]
@@ -259,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.1 Observe both distal and proximal perspectives\n",
+    "### Observe both distal and proximal perspectives\n",
     "\n",
     "Now let's watch the world from both the global, top-down view and the local, robot-based view at the same time. "
    ]
@@ -307,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2 Experience the world as the robot does\n",
+    "### Experience the world as the robot does\n",
     "\n",
     "Seeing the world through the robot's camera is very different then seeing it from the bird's-eye view.  Let's try to really take the robot's perspective. \n",
     "\n",
@@ -404,7 +392,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Time: 00:00:10.00'), HBox(children=(GridspecLayout(children=(Button(description='\u2b09\u2026"
+       "VBox(children=(Label(value='Time: 00:00:10.00'), HBox(children=(GridspecLayout(children=(Button(description='⬉…"
       ]
      },
      "metadata": {},
@@ -452,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.3 Try again\n",
+    "### Try again\n",
     "\n",
     "At the top of the dashboard you can see the time it took for you to reach the pink box.  Start again from the top of this notebook and see if you can reach the pink box faster this time.  By practicing, you should get better at seeing the world from the robot's perspective.  "
    ]
@@ -461,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Conclusions\n",
+    "## Conclusions\n",
     "\n",
     "Some Cognitive Scientists believe that a key to understanding cognition is embracing the fact that organisms are embedded in environments.  Brains evolved to control bodies, and it is the interplay between the brain, the body, and the environment from which cognition emerges. Hopefully this experience of taking the robot's proximal perspective gave you a taste of what it is like to be a robot. "
    ]
@@ -470,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. References\n",
+    "## References\n",
     "\n",
     "1. https://en.wikipedia.org/wiki/What_Is_It_Like_to_Be_a_Bat\n",
     "2. https://en.wikipedia.org/wiki/Umwelt\n",
@@ -501,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -525,7 +513,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\uff0d",
+       "description": "－",
        "layout": "IPY_MODEL_846318091a8f44a2b1e196fcab5712dc",
        "style": "IPY_MODEL_f4cb44e88154463787bf9740c33ca411"
       }
@@ -1170,7 +1158,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u2572",
+       "description": "╲",
        "layout": "IPY_MODEL_1c5ebfdbdccc4dd6957d6defb5f31055",
        "style": "IPY_MODEL_f6322d3ffd454440a544f3f8e58ccefd"
       }
@@ -1723,7 +1711,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\uff5c",
+       "description": "｜",
        "layout": "IPY_MODEL_8539b43e6ebc491eb467b646bb363c1d",
        "style": "IPY_MODEL_21d0c0932559429f9d799365baf4ea8d"
       }
@@ -2131,7 +2119,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u2b08",
+       "description": "⬈",
        "layout": "IPY_MODEL_c67cd91b61ec4f53a99d7428c45e60b9",
        "style": "IPY_MODEL_6595f817a2764651b60209cc352d84f7"
       }
@@ -2394,7 +2382,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u27a1",
+       "description": "➡",
        "layout": "IPY_MODEL_9493e0ded99f46e1bb2f887173713da2",
        "style": "IPY_MODEL_18a3a2e12db94835bc4286bf3546f378"
       }
@@ -2658,7 +2646,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\uff0d",
+       "description": "－",
        "layout": "IPY_MODEL_8c9ef88eeb5c400ebc07d4603d2adff4",
        "style": "IPY_MODEL_ada5de858a1f44d5a32ef5143c9905dd"
       }
@@ -2668,7 +2656,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u2571",
+       "description": "╱",
        "layout": "IPY_MODEL_cc1c39ec3dc743aba5f7485176ee0c6f",
        "style": "IPY_MODEL_b04bb806bf744cb5a6096bca2efdefa6"
       }
@@ -3059,7 +3047,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u2b05",
+       "description": "⬅",
        "layout": "IPY_MODEL_c35d05d9bfd249b4b86db4f506fc27b5",
        "style": "IPY_MODEL_8f1105df94914faa8bdd1966d6cb635b"
       }
@@ -3384,7 +3372,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u2b09",
+       "description": "⬉",
        "layout": "IPY_MODEL_ff6574aa98854f54beb0e5cd5689e15c",
        "style": "IPY_MODEL_6fd86e5f6c6d4772bb94cfef5e9a7948"
       }
@@ -4422,7 +4410,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u2b0b",
+       "description": "⬋",
        "layout": "IPY_MODEL_230d4fd415e248edbd2e4031792750d2",
        "style": "IPY_MODEL_a416290fe2f64f67aa6e621d6129abc6"
       }
@@ -4462,7 +4450,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u2b06",
+       "description": "⬆",
        "layout": "IPY_MODEL_3811e51a3a264b7bb18d1a25c72a8051",
        "style": "IPY_MODEL_674ae62318d04d11bec4b82aa1f8352b"
       }
@@ -4482,7 +4470,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u2b0a",
+       "description": "⬊",
        "layout": "IPY_MODEL_d654d85fce7646fdaa859116a2b36a1b",
        "style": "IPY_MODEL_e026a82f6d9f4c7296fbb8b2218a5413"
       }
@@ -6347,7 +6335,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u2572",
+       "description": "╲",
        "layout": "IPY_MODEL_9b64d9c9b8644d3eb9825256df75c0b1",
        "style": "IPY_MODEL_27a371232efb482cb1f7dd2d7f220b80"
       }
@@ -6462,7 +6450,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\uff5c",
+       "description": "｜",
        "layout": "IPY_MODEL_ce9a3651b5014a97bef00abf06e912ad",
        "style": "IPY_MODEL_e4f00a60792c4697b29b32bd48aeecbe"
       }
@@ -6478,7 +6466,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u2b07",
+       "description": "⬇",
        "layout": "IPY_MODEL_c3b8c8002643435ab1f82d1bc8172bb8",
        "style": "IPY_MODEL_197032a703c84d339715b3b251890250"
       }
@@ -7618,7 +7606,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u2299",
+       "description": "⊙",
        "layout": "IPY_MODEL_9545d9307ca64c6682c79c853e465408",
        "style": "IPY_MODEL_fa3f82163d56427a9dfa5b6665725f6f"
       }
@@ -7707,7 +7695,7 @@
       "model_module_version": "1.5.0",
       "model_name": "ButtonModel",
       "state": {
-       "description": "\u2571",
+       "description": "╱",
        "layout": "IPY_MODEL_1ee43feafdf743c8aeb86711e99eaac0",
        "style": "IPY_MODEL_06f1577cfe9046d59beba3e844fd45ce"
       }
