--- a/notebooks/ChessPlayer.ipynb
+++ b/notebooks/ChessPlayer.ipynb
@@ -3,25 +3,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/Programming_a_Chess_Player.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "AQMTpw5e_0cx"
-   },
-   "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/ChessPlayer.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computational Essays on Artificial Intelligence\n",
-    "## Programming a Chess Player\n",
+    "# Programming a Chess Player\n",
     "\n",
     "In this essay we will begin to explore *symbolic computation* by writing a program to play Chess. Perhaps you don't know how to play Chess... no problem! You don't really need to know much, but a primer on Chess may be useful. Here are some links that might be useful:\n",
     "\n",
@@ -42,10 +32,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "AQMTpw5e_0cx"
+   },
+   "outputs": [],
    "source": [
-    "## 1. Setup"
+    "%pip install aitk --upgrade --quiet"
    ]
   },
   {
@@ -123,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. The chess library"
+    "## The chess library"
    ]
   },
   {
@@ -415,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 Making Moves"
+    "## Making Moves"
    ]
   },
   {
@@ -496,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Universal Chess Interface"
+    "### Universal Chess Interface"
    ]
   },
   {
@@ -571,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3.2 Standard Algebraic Notation"
+    "### Standard Algebraic Notation"
    ]
   },
   {
@@ -617,7 +611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Programming a Random Player"
+    "## Programming a Random Player"
    ]
   },
   {
@@ -722,7 +716,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Playing a Game"
+    "## Playing a Game"
    ]
   },
   {
@@ -919,7 +913,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Allowing a Human Player"
+    "## Allowing a Human Player"
    ]
   },
   {
@@ -987,7 +981,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Analysis"
+    "## Analysis"
    ]
   },
   {
@@ -1049,7 +1043,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1 Static Analysis/Board Evaluation"
+    "## Static Analysis/Board Evaluation"
    ]
   },
   {
@@ -1425,7 +1419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Suggestions"
+    "## Suggestions"
    ]
   },
   {
@@ -1447,7 +1441,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1461,7 +1455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
