--- a/notebooks/FunWithLight.ipynb
+++ b/notebooks/FunWithLight.ipynb
@@ -3,7 +3,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/FunWithLight.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/FunWithLight.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fun with light\n",
+    "\n",
+    "Suppose we have a robot that's goal is to seek light.  In the world there is a single light source which is attached to another robot. The second robot's goal is to keep moving and avoid obstacles.  What happens when we put these two robots together?  Let's find out..."
+   ]
   },
   {
    "cell_type": "code",
@@ -14,15 +25,6 @@
    "outputs": [],
    "source": [
     "%pip install aitk --upgrade --quiet"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Fun with light\n",
-    "\n",
-    "Suppose we have a robot that's goal is to seek light.  In the world there is a single light source which is attached to another robot. The second robot's goal is to keep moving and avoid obstacles.  What happens when we put these two robots together?  Let's find out..."
    ]
   },
   {
@@ -102,7 +104,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
       ]
      },
      "metadata": {},
@@ -182,18 +184,11 @@
     "world.set_seed(random())\n",
     "world.run([wander_avoid,seek_light],real_time=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -207,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
