--- a/notebooks/NNGACoverage.ipynb
+++ b/notebooks/NNGACoverage.ipynb
@@ -3,17 +3,8 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/NNGA_Coverage.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "AQMTpw5e_0cx"
-   },
-   "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/NNGACoverage.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -30,24 +21,6 @@
     "1. A `chromosome` will be composed of a series of `genes`, each representing a weight in a neural network\n",
     "2. A `population` of chromosomes is generated randomly\n",
     "3. For a number of generations the chromosomes are `mutated` by a small amount"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "qu0oA5NWUGu-"
-   },
-   "source": [
-    "### 1. Setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "    <b>Note</b>: if running this notebook on Google Colab, you will need to install the required Python packages each time you start a session. Otherwise, you only need to install the packages once.\n",
-    "</div>"
    ]
   },
   {
@@ -123,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. The Genetic Algorithm"
+    "## The Genetic Algorithm"
    ]
   },
   {
@@ -224,7 +197,7 @@
     "id": "8zDTWbLNUGvC"
    },
    "source": [
-    "## 2.1 The Fitness Function\n",
+    "## The Fitness Function\n",
     "\n",
     "To use a GA we need to define a `fitness function`. A fitness function tests a chromosome in the simulated world, and returns a value that represents how \"apt\" (or fit) it is relative to the other chromosomes in the population at this generation.\n",
     "\n",
@@ -377,15 +350,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "    <b>Idea</b>: when running in Jupyter Lab, you can right-click on the two watch cells (after running them) and select \"Create New View for Output\" for each. You can then drag the panels over so that you can see them along side the notebook.\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -414,7 +378,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
       ]
      },
      "metadata": {},
@@ -458,7 +422,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "HTML(value='<div style=\"outline: 5px solid #1976D2FF; width: 400px; height: 324px;\"><svg id=\\'keras-network\\' \u2026"
+       "HTML(value='<div style=\"outline: 5px solid #1976D2FF; width: 400px; height: 324px;\"><svg id=\\'keras-network\\' …"
       ]
      },
      "metadata": {},
@@ -473,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Testing\n",
+    "## Testing\n",
     "\n",
     "Let's test everything to make sure it is working.\n",
     "\n",
@@ -664,7 +628,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Evolving"
+    "## Evolving"
    ]
   },
   {
@@ -747,7 +711,7 @@
     "id": "CbCDQPkJUGvL"
    },
    "source": [
-    "### 4. Analysis\n",
+    "## Analysis\n",
     "\n",
     "We can see a summary of the best and average fitness in the population over time:"
    ]
@@ -919,13 +883,6 @@
    "source": [
     "ga.grid.analyze_visits()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -936,7 +893,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -950,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
