--- a/notebooks/NNRobotLab.ipynb
+++ b/notebooks/NNRobotLab.ipynb
@@ -3,24 +3,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/NNRobotLab.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "AQMTpw5e_0cx"
-   },
-   "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/NNRobotLab.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bio-Inspired Artificial Intelligence \u2014 Spring 2021\n",
+    "## Bio-Inspired Artificial Intelligence — Spring 2021\n",
     "# Lab: Teaching Neural Networks to Control Robots"
    ]
   },
@@ -40,19 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "id": "AQMTpw5e_0cx"
+   },
+   "outputs": [],
    "source": [
-    "%pip install aitk.robots aitk.networks tensorflow numpy --quiet"
+    "%pip install aitk --upgrade --quiet"
    ]
   },
   {
@@ -102,7 +87,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
       ]
      },
      "metadata": {},
@@ -272,7 +257,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "HTML(value='<div style=\"outline: 5px solid #1976D2FF; width: 397px; height: 400px;\"><svg id=\\'keras-network\\' \u2026"
+       "HTML(value='<div style=\"outline: 5px solid #1976D2FF; width: 397px; height: 400px;\"><svg id=\\'keras-network\\' …"
       ]
      },
      "metadata": {},
@@ -3460,7 +3445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3474,7 +3459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
