--- a/notebooks/NoveltyCoverage.ipynb
+++ b/notebooks/NoveltyCoverage.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/Novelty_Coverage.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/NoveltyCoverage.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
    "cell_type": "code",
@@ -22,8 +24,7 @@
     "id": "V6THckODUGu6"
    },
    "source": [
-    "# Computational Essays on Artificial Intelligence\n",
-    "## Evolving _Novel_ Robot Controllers\n",
+    "# Evolving _Novel_ Robot Controllers\n",
     "\n",
     "In this essay, we explore using Novelty Search to measure the fitness for a Genetic Algorithm that is evolving neural networks for robot control.\n"
    ]
@@ -275,7 +276,7 @@
     "id": "8zDTWbLNUGvC"
    },
    "source": [
-    "## 2.1 The Fitness Function\n",
+    "## The Fitness Function\n",
     "\n",
     "To use a GA we need to define a `fitness function`. A fitness function tests a chromosome in the simulated world, and returns a value that represents how \"apt\" (or fit) it is relative to the other chromosomes in the population at this generation."
    ]
@@ -461,7 +462,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
       ]
      },
      "metadata": {},
@@ -505,7 +506,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "HTML(value='<div style=\"outline: 5px solid #1976D2FF; width: 400px; height: 324px;\"><svg id=\\'keras-network\\' \u2026"
+       "HTML(value='<div style=\"outline: 5px solid #1976D2FF; width: 400px; height: 324px;\"><svg id=\\'keras-network\\' …"
       ]
      },
      "metadata": {},
@@ -1012,13 +1013,6 @@
     "\n",
     "Although this task may not be deceptive, there are a huge diversity of possible successful behaviors. Applying novelty search to this task allows the GA to better find a collection of both unique and successful coverage strategies."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1029,7 +1023,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1043,7 +1037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
