--- a/notebooks/Advanced/CartWorld.ipynb
+++ b/notebooks/Advanced/CartWorld.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/CartWorld.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/CartWorld.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
    "cell_type": "code",
@@ -49,7 +51,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
       ]
      },
      "metadata": {},
@@ -87,7 +89,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Image(value=b'', layout=\"Layout(display='none', height='auto', width='-webkit-fill-available')\"\u2026"
+       "VBox(children=(Image(value=b'', layout=\"Layout(display='none', height='auto', width='-webkit-fill-available')\"…"
       ]
      },
      "metadata": {},
@@ -269,7 +271,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "HTML(value='<div style=\"outline: 5px solid #1976D2FF; width: 400px; height: 388px;\"><svg id=\\'keras-network\\' \u2026"
+       "HTML(value='<div style=\"outline: 5px solid #1976D2FF; width: 400px; height: 388px;\"><svg id=\\'keras-network\\' …"
       ]
      },
      "metadata": {},
@@ -340,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
