--- a/notebooks/Advanced/CompassAndBeacon.ipynb
+++ b/notebooks/Advanced/CompassAndBeacon.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6253da9f",
    "metadata": {},
-   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/CompassAndBeacon.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/CompassAndBeacon.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0093549f",
    "metadata": {
     "id": "AQMTpw5e_0cx"
    },
@@ -60,7 +64,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
       ]
      },
      "metadata": {},
@@ -125,7 +129,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Compass:'), Text(value='compass', description='Name:', layout=Layout(display='flex\u2026"
+       "VBox(children=(Label(value='Compass:'), Text(value='compass', description='Name:', layout=Layout(display='flex…"
       ]
      },
      "metadata": {},
@@ -218,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
